redacted-compiler-plugin/testData/diagnostic/DoubleAnnotation.kt
// RENDER_DIAGNOSTICS_FULL_TEXT

<!REDACTED_ERROR!>@Redacted<!>
data class DoubleAnnotation(<!REDACTED_ERROR!>@Redacted<!> val a: Int)
